err/dxfstructure.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/dxfstructure'...
Listing './lib/python3.5/site-packages/dxfstructure/dxftest'...
Listing './lib/python3.5/site-packages/dxfstructure/example'...
Listing './lib/python3.5/site-packages/dxfstructure/memos'...
Listing './lib/python3.5/site-packages/dxfstructure/pycore'...
Compiling './lib/python3.5/site-packages/dxfstructure/pycore/Bar.py'...
***   File "./lib/python3.5/site-packages/dxfstructure/pycore/Bar.py", line 237
    print '=================================='
                                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dxfstructure/pycore/Checker.py'...
***   File "./lib/python3.5/site-packages/dxfstructure/pycore/Checker.py", line 61
    print '********* Checking dxf for concrete model ***************'
                                                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dxfstructure/pycore/ConcreteModel.py'...
***   File "./lib/python3.5/site-packages/dxfstructure/pycore/ConcreteModel.py", line 55
    print '++++++++++++++bar_list_info+++++++++++++++++++++'
                                                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dxfstructure/pycore/Creator.py'...
***   File "./lib/python3.5/site-packages/dxfstructure/pycore/Creator.py", line 67
    print 'draw_steel_section one'
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dxfstructure/pycore/Drawing.py'...
***   File "./lib/python3.5/site-packages/dxfstructure/pycore/Drawing.py", line 39
    print "DS_drawing init"
                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dxfstructure/pycore/Element.py'...
***   File "./lib/python3.5/site-packages/dxfstructure/pycore/Element.py", line 218
    print element.name, element.quantity
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dxfstructure/pycore/Executor.py'...
***   File "./lib/python3.5/site-packages/dxfstructure/pycore/Executor.py", line 59
    print "DoCommand - '%s'......" %command
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dxfstructure/pycore/EzdxfPen2D.py'...
***   File "./lib/python3.5/site-packages/dxfstructure/pycore/EzdxfPen2D.py", line 69
    print 'Saved to %s' %self.scene.filename
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dxfstructure/pycore/Profile.py'...
***   File "./lib/python3.5/site-packages/dxfstructure/pycore/Profile.py", line 181
    print '=================================='
                                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dxfstructure/pycore/Scaner.py'...
***   File "./lib/python3.5/site-packages/dxfstructure/pycore/Scaner.py", line 68
    print '********* Loading data to model ***************'
                                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dxfstructure/pycore/Schedule.py'...
***   File "./lib/python3.5/site-packages/dxfstructure/pycore/Schedule.py", line 95
    print '****** drawing concrete bar schedule in drawing ************'
                                                                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dxfstructure/pycore/Screw.py'...
***   File "./lib/python3.5/site-packages/dxfstructure/pycore/Screw.py", line 120
    print '=================================='
                                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dxfstructure/pycore/SteelModel.py'...
***   File "./lib/python3.5/site-packages/dxfstructure/pycore/SteelModel.py", line 63
    print '++++++++++++++profilelist_info+++++++++++++++++++++'
                                                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dxfstructure/pycore/geo.py'...
***   File "./lib/python3.5/site-packages/dxfstructure/pycore/geo.py", line 313
    print '-------------Point testing------------'
                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dxfstructure/pycore/layer_system.py'...
***   File "./lib/python3.5/site-packages/dxfstructure/pycore/layer_system.py", line 61
    print layer_name_list
                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dxfstructure/pycore/rcbar_prop.py'...
***   File "./lib/python3.5/site-packages/dxfstructure/pycore/rcbar_prop.py", line 47
    print mass_per_meter(12.0)
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dxfstructure/pycore/schedule_format_bar.py'...
***   File "./lib/python3.5/site-packages/dxfstructure/pycore/schedule_format_bar.py", line 90
    print tabulate(header(), numalign="right")
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dxfstructure/pycore/schedule_format_profile.py'...
***   File "./lib/python3.5/site-packages/dxfstructure/pycore/schedule_format_profile.py", line 93
    print tabulate(header(), numalign="right")
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dxfstructure/pycore/schedule_format_screw.py'...
***   File "./lib/python3.5/site-packages/dxfstructure/pycore/schedule_format_screw.py", line 77
    print tabulate(header(), numalign="right")
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dxfstructure/pycore/section_base_report.py'...
***   File "./lib/python3.5/site-packages/dxfstructure/pycore/section_base_report.py", line 97
    print report_group()
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dxfstructure/pycore/text_syntax_bar.py'...
***   File "./lib/python3.5/site-packages/dxfstructure/pycore/text_syntax_bar.py", line 99
    print '-----------------------------'
                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dxfstructure/pycore/text_syntax_element.py'...
***   File "./lib/python3.5/site-packages/dxfstructure/pycore/text_syntax_element.py", line 51
    print has_correct_format(test_text)
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dxfstructure/pycore/text_syntax_profile.py'...
***   File "./lib/python3.5/site-packages/dxfstructure/pycore/text_syntax_profile.py", line 92
    print re_text.findall(text)
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dxfstructure/pycore/text_syntax_screw.py'...
***   File "./lib/python3.5/site-packages/dxfstructure/pycore/text_syntax_screw.py", line 65
    print re_text.findall(text)
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dxfstructure/qtui'...
Listing './lib/python3.5/site-packages/dxfstructure-0.2.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
